# RAG_Architecture_Week-03-04_AEE_Bootcamp_-ZuuCrew

./: .gitignore  README.md  pyproject.toml  requirements.txt
artifacts/manifests/: health.json  langchain_fixed.json  langchain_recursive.json  llamaindex_fixed.json  llamaindex_recursive.json  memory_lcel.json
artifacts/naive_tfidf/: chunks.parquet
notebooks/: 01_naive_rag_from_scratch_template.ipynb  02_langchain_pdf_rag_chunking_template.ipynb  03_memory_lcel_basics_template.ipynb  04_advanced_retrieval_rerank_finetune_template.ipynb  06_multimodal_rag_health_clip.ipynb
src/: __init__.py
src/config/: config.yaml
src/scripts/: __init__.py  update_notebook_imports.py  verify_install.py
src/services/: __init__.py  llm_services.py
